<resources>
    <string name="app_name">Cooking converter</string>
    <string name="convert_button_text">Convert</string>
    <string name="roundup_tip_text">Round up?</string>
    <string name="milli_oz">Millimeter (ml) to fluid ounce (oz)</string>
    <string name="oz_milli">Fluid ounce (oz) to millimeter (ml)</string>
    <string name="service_question_text">How was the service?</string>
    <string name="amount_in_volume">Volume</string>
    <string name="converted_result">Result: %s</string>
</resources>