<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/amount_in_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/amount_in_volume"
            app:srcCompat="@drawable/ic_volume_input" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_in_volume"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/amount_in_volume"
            app:layout_constraintStart_toEndOf="@+id/icon_volume"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount_in_volume_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/conversion_options"
            style="@style/Widget.TipTime.CompoundButton.RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/milli_oz"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/amount_in_volume"
            app:layout_constraintTop_toBottomOf="@id/amount_in_volume">

            <RadioButton
                android:id="@+id/milli_oz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/milli_oz" />

            <RadioButton
                android:id="@+id/oz_milli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oz_milli" />

        </RadioGroup>

        <ImageView
            android:id="@+id/icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@id/converter_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/converter_switch"
            app:srcCompat="@drawable/ic_round_up" />


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/converter_switch"
            style="@style/Widget.TipTime.CompoundButton.Switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/roundup_tip_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/conversion_options"
            app:layout_constraintTop_toBottomOf="@id/conversion_options" />

        <Button
            android:id="@+id/convert_button"
            style="widget.tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/convert_button_text"
            app:layout_constraintEnd_toEndOf="@id/converter_switch"
            app:layout_constraintStart_toStartOf="@id/converter_switch"
            app:layout_constraintTop_toBottomOf="@id/converter_switch" />

        <TextView
            android:id="@+id/conversion_result"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/convert_button"
            tools:text="Result: " />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>